--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,4 +1,10 @@
-<h1>App Component</h1>
-<app-server></app-server>
-<p>Newly Created Servers Component</p>
-<app-servers></app-servers>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>App Component</h1>
+            <app-server></app-server>
+            <p>Newly Created Servers Component</p>
+            <app-servers></app-servers>
+        </div>
+    </div>
+</div>
